--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     implementation 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 
 
 
