--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
@@ -18,11 +19,13 @@
         android:theme="@style/Theme.Antiquette">
         <activity android:name=".Login" />
         <activity android:name=".Inscription" />
-        <activity android:name=".UserActivity" />
-        <activity android:name=".StoreMap" />
         <activity android:name=".Home" />
         <activity android:name=".GridItemActivity" />
         <activity android:name=".MainActivity">
+            <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="@string/google_maps_key" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
